Fixes a nav issue on tablet viewports and update for video scaling on mobile and tablet

--- a/src/App.scss
+++ b/src/App.scss
@@ -252,7 +252,7 @@ body {
   overflow: hidden;
 }
 
-@media only screen and (min-width: 1416px) {
+@media only screen and (min-width: 900px) {
   .page-container {
     position: relative;
     padding-top: 130px;
