--- a/src/components/Nav.scss
+++ b/src/components/Nav.scss
@@ -100,7 +100,7 @@
   }
 }
 
-@media only screen and (min-width: 1416px) {
+@media only screen and (min-width: 900px) {
   .nav-container {
     position: absolute;
     width: 89.4%;
