--- a/src/components/PagePositionScrollBar.scss
+++ b/src/components/PagePositionScrollBar.scss
@@ -4,7 +4,7 @@
   display: none;
 }
 
-@media only screen and (max-width: 992px) {
+@media only screen and (max-width: 900px) {
   .bar-container {
     display: block;
     background-color: black;
