--- a/src/components/VideoBackground.scss
+++ b/src/components/VideoBackground.scss
@@ -61,12 +61,12 @@
 }
 @media only screen and (min-width: 992px) and (max-width: 1415px) {
   .html-video-container video {
-    transform: scale(3.5);
+    transform: scale(1.5);
   }
 }
 @media only screen and (min-width: 600px) and (max-width: 992px) {
   .html-video-container video {
-    transform: scale(3.5);
+    transform: scale(2);
   }
 }
 
